--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,14 +18,14 @@
     <filter-name>encodingFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
-  <filter>
+  <!-- <filter>
     <filter-name>loginFilter</filter-name>
     <filter-class>com.cyq.bookstore.util.LoginFilter</filter-class>
   </filter>
   <filter-mapping>
     <filter-name>loginFilter</filter-name>
     <url-pattern>/jsp/*</url-pattern>
-  </filter-mapping>
+  </filter-mapping> -->
   <session-config>
     <session-timeout>1</session-timeout>
   </session-config>
@@ -48,6 +48,15 @@
   <servlet-mapping>
     <servlet-name>SpringMVC</servlet-name>
     <url-pattern>/</url-pattern>
+    <!-- 配置拦截器不拦截静态资源 -->
+    <!-- <servlet-name>default</servlet-name>             
+    <url-pattern>*.html</url-pattern>
+    <servlet-name>default</servlet-name>             
+    <url-pattern>*.css</url-pattern>
+    <servlet-name>default</servlet-name>             
+    <url-pattern>*.js</url-pattern>
+    <servlet-name>default</servlet-name>             
+    <url-pattern>*.jpg</url-pattern>  -->
   </servlet-mapping>
   <welcome-file-list>
     <welcome-file>/index.jsp</welcome-file>
