对前后端连接有新的认识

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -48,15 +48,23 @@
   <servlet-mapping>
     <servlet-name>SpringMVC</servlet-name>
     <url-pattern>/</url-pattern>
-    <!-- 配置拦截器不拦截静态资源 -->
-    <!-- <servlet-name>default</servlet-name>             
+  </servlet-mapping>
+  <!-- 配置拦截器不拦截静态资源 -->
+  <servlet-mapping>
+  	<servlet-name>default</servlet-name>             
     <url-pattern>*.html</url-pattern>
-    <servlet-name>default</servlet-name>             
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>default</servlet-name>             
     <url-pattern>*.css</url-pattern>
-    <servlet-name>default</servlet-name>             
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>default</servlet-name>             
     <url-pattern>*.js</url-pattern>
-    <servlet-name>default</servlet-name>             
-    <url-pattern>*.jpg</url-pattern>  -->
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>default</servlet-name>             
+    <url-pattern>*.jpg</url-pattern>
   </servlet-mapping>
   <welcome-file-list>
     <welcome-file>/index.jsp</welcome-file>
