--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -7,3 +7,4 @@ encoding//src/main/webapp/index.jsp=UTF-8
 encoding//src/main/webapp/jsp/userLogin.html=UTF-8
 encoding//src/main/webapp/resource/css/bookEdit.css=UTF-8
 encoding//src/test/java/TestMyBatis.java=UTF-8
+encoding/<project>=UTF-8
