--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -67,6 +67,6 @@
     <url-pattern>*.jpg</url-pattern>
   </servlet-mapping>
   <welcome-file-list>
-    <welcome-file>/index.jsp</welcome-file>
+    <welcome-file>/jsp/indexAdmin.html</welcome-file>
   </welcome-file-list>
 </web-app>
