--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,14 +18,6 @@
     <filter-name>encodingFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
-  <!-- <filter>
-    <filter-name>loginFilter</filter-name>
-    <filter-class>com.cyq.bookstore.util.LoginFilter</filter-class>
-  </filter>
-  <filter-mapping>
-    <filter-name>loginFilter</filter-name>
-    <url-pattern>/jsp/*</url-pattern>
-  </filter-mapping> -->
   <session-config>
     <session-timeout>1</session-timeout>
   </session-config>
@@ -50,7 +42,7 @@
     <url-pattern>/</url-pattern>
   </servlet-mapping>
   <!-- 配置拦截器不拦截静态资源 -->
-  <servlet-mapping>
+<!--   <servlet-mapping>
   	<servlet-name>default</servlet-name>             
     <url-pattern>*.html</url-pattern>
   </servlet-mapping>
@@ -65,7 +57,7 @@
   <servlet-mapping>
   	<servlet-name>default</servlet-name>             
     <url-pattern>*.jpg</url-pattern>
-  </servlet-mapping>
+  </servlet-mapping> -->
   <welcome-file-list>
     <welcome-file>/jsp/indexAdmin.html</welcome-file>
   </welcome-file-list>
