理解log4j的日志级别配置

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,3 +1,5 @@
+#此句为将等级为INFO的日志信息输出到Console和File这两个目的地
+#等级可分为OFF、FATAL、ERROR、WARN、INFO、DEBUG、ALL
 log4j.rootLogger=INFO,Console,File  
 log4j.appender.Console=org.apache.log4j.ConsoleAppender  
 log4j.appender.Console.Target=System.out  
