--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -41,7 +41,7 @@
     <servlet-name>SpringMVC</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
-  <welcome-file-list>
+  <!-- <welcome-file-list>
     <welcome-file>/jsp/indexAdmin.html</welcome-file>
-  </welcome-file-list>
+  </welcome-file-list> -->
 </web-app>
